Fix vertical alignment of link-buttons; fix rename page so it doesn't have a double header

--- a/public/stylesheets/wiki.css
+++ b/public/stylesheets/wiki.css
@@ -183,6 +183,11 @@ ul.menu li {
 
 /* simply buttons overrides */
 
+a.button {
+  position: relative;
+  top: 2px;
+}
+
 button.submit span span,
 a.submit span span,
 a.submit:link span span,
